--- a/Resources/Private/Translations/en/NodeTypes/IconMixin.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/IconMixin.xlf
@@ -8,6 +8,9 @@
 			<trans-unit id="properties.icon" xml:space="preserve">
 				<source>Icon</source>
 			</trans-unit>
+			<trans-unit id="properties.hasBorder" xml:space="preserve">
+				<source>Add border</source>
+			</trans-unit>
 			<trans-unit id="properties.iconSize" xml:space="preserve">
 				<source>Icon Size</source>
 			</trans-unit>
